@@ -394,7 +394,7 @@
          {refresh, 5}, % seconds
          {cache, 300} % seconds
          ],
-        none,
+        immediate_closest,
         5000, 5000, 5000, undefined, undefined, 1, 5, 300, []},
     % normal echo in python
     {external,
